# VoxStack

./: .gitignore  README.org  pyproject.toml
scripts/: parser.py  train.py  utils.py
