[project]
name = "voxstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flagembedding>=1.3.5",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "opensmile>=2.6.0",
    "pandas>=3.0.1",
    "pydub>=0.25.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "setuptools==81.0",
    "shap>=0.49.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "transformers>=4.30.0,<5.0",
]
